--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <div class="board">
+    <div class="game">
         <header class="boardEle">
             <h1>Tic-Tac-Toe</h1>
             <div class="switch">
@@ -23,17 +23,18 @@
             </div>
             <button id="startButton">Start</button>
         </header>
-        <button class="boardEle tile" id="0" value="0"></button>
-        <button class="boardEle tile" id="1" value="1"></button>
-        <button class="boardEle tile" id="2" value="2"></button>
-        <button class="boardEle tile" id="3" value="3"></button>
-        <button class="boardEle tile" id="4" value="4"></button>
-        <button class="boardEle tile" id="5" value="5"></button>
-        <button class="boardEle tile" id="6" value="6"></button>
-        <button class="boardEle tile" id="7" value="7"></button>
-        <button class="boardEle tile" id="8" value="8"></button>
-
-
+        <div class="board">
+            <button class="boardEle tile" id="0" value="0"></button>
+            <button class="boardEle tile" id="1" value="1"></button>
+            <button class="boardEle tile" id="2" value="2"></button>
+            <button class="boardEle tile" id="3" value="3"></button>
+            <button class="boardEle tile" id="4" value="4"></button>
+            <button class="boardEle tile" id="5" value="5"></button>
+            <button class="boardEle tile" id="6" value="6"></button>
+            <button class="boardEle tile" id="7" value="7"></button>
+            <button class="boardEle tile" id="8" value="8"></button>
+            <div class="resultBox" id="resultBox"></div>
+        </div>
     </div>
 
 </body>
